# backend/src/main/java/org/seng302/leftovers/controllers/SaleController.java
@@ -3,12 +3,14 @@ package org.seng302.leftovers.controllers;
 import net.minidev.json.JSONObject;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.seng302.leftovers.dto.SetSaleItemInterestDTO;
 import org.seng302.leftovers.entities.Business;
 import org.seng302.leftovers.entities.InventoryItem;
 import org.seng302.leftovers.entities.SaleItem;
 import org.seng302.leftovers.persistence.BusinessRepository;
 import org.seng302.leftovers.persistence.InventoryItemRepository;
 import org.seng302.leftovers.persistence.SaleItemRepository;
+import org.seng302.leftovers.persistence.UserRepository;
 import org.seng302.leftovers.tools.AuthenticationTokenManager;
 import org.seng302.leftovers.tools.JsonTools;
 import org.seng302.leftovers.tools.SearchHelper;
@@ -22,6 +24,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import javax.validation.Valid;
 import java.util.List;
 import java.util.Set;
 
@@ -29,11 +32,13 @@ import java.util.Set;
 public class SaleController {
     private static final Logger logger = LogManager.getLogger(SaleController.class);
 
+    private final UserRepository userRepository;
     private final BusinessRepository businessRepository;
     private final SaleItemRepository saleItemRepository;
     private final InventoryItemRepository inventoryItemRepository;
 
-    public SaleController(BusinessRepository businessRepository, SaleItemRepository saleItemRepository, InventoryItemRepository inventoryItemRepository) {
+    public SaleController(UserRepository userRepository, BusinessRepository businessRepository, SaleItemRepository saleItemRepository, InventoryItemRepository inventoryItemRepository) {
+        this.userRepository = userRepository;
         this.businessRepository = businessRepository;
         this.saleItemRepository = saleItemRepository;
         this.inventoryItemRepository = inventoryItemRepository;
@@ -75,7 +80,7 @@ public class SaleController {
     public JSONObject addSaleItemToBusiness(@PathVariable Long id, @RequestBody JSONObject saleItemInfo, HttpServletRequest request, HttpServletResponse response) {
         try {
             AuthenticationTokenManager.checkAuthenticationToken(request);
-            logger.info(() -> String.format("Adding sales item to business (businessId=%d).", id));
+            logger.info("Adding sales item to business (businessId={}).", id);
             Business business = businessRepository.getBusinessById(id);
             business.checkSessionPermissions(request);
 
@@ -136,7 +141,7 @@ public class SaleController {
                                               @RequestParam(required = false) Boolean reverse) {
         try {
             AuthenticationTokenManager.checkAuthenticationToken(request);
-            logger.info(() -> String.format("Getting sales item for business (businessId=%d).", id));
+            logger.info("Getting sales item for business (businessId={}).", id);
             Business business = businessRepository.getBusinessById(id);
 
             Sort.Direction direction = SearchHelper.getSortDirection(reverse);
@@ -153,5 +158,32 @@ public class SaleController {
             logger.error(error.getMessage());
             throw error;
         }
+    }
+
+    @PutMapping("/listings/{id}/interest")
+    public void setSaleItemInterest(
+            @PathVariable Long id,
+            HttpServletRequest request,
+            @Valid @RequestBody SetSaleItemInterestDTO body
+            ) {
+        AuthenticationTokenManager.checkAuthenticationToken(request);
+        logger.info("Updating the interest for the sales item (listingId={},userId={},interested={}).", id, body.getUserId(), body.getInterested());
+
+        if (!AuthenticationTokenManager.sessionCanSeePrivate(request, body.getUserId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "User cannot change listing interest of another user");
+        }
+
+        var user = userRepository.findById(body.getUserId())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "User does not exist"));
+
+        var saleItem = saleItemRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_ACCEPTABLE, "Listing not found"));
+
+        if (Boolean.TRUE.equals(body.getInterested())) {
+            saleItem.addInterestedUser(user);
+        } else {
+            saleItem.removeInterestedUser(user);
+        }
+        saleItemRepository.save(saleItem);
     }
 }
